--- a/visitus.html
+++ b/visitus.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 <div class="topnav">
-  <a href="index.html"><b>HOME</b></a>
-  <a href="aboutus.html"><b>ABOUT US</b></a>
-  <a href="attractions.html"><b>ATTRACTIONS</b></a>
-  <a class="active" href="visitus.html"><b>VISIT US</b></a>
+  <a href="index.html"><img src="sbglogo.jpg" alt="Singapore Botanic Gardens" width="180" height="73"></a>
+  <a href="index.html"><br><br><b>HOME</b></a>
+  <a href="aboutus.html"><br><br><b>ABOUT US</b></a>
+  <a href="attractions.html"><br><br><b>ATTRACTIONS</b></a>
+  <a class="active" href="visitus.html"><br><br><b>VISIT US</b></a>
 </div>
 
 <h2 id="CP"></h2>
@@ -34,7 +35,7 @@
   <hr>
 
   <h3 id="C2"> 2) Map of the Gardens </h3>
-  <p>Link: <a href="https://www.nparks.gov.sg/-/media/sbg/documents/map-sbg-11-feb-2022.jpg?la=en&hash=4073CCD22B168785F034BC0D67095FA6F16A8F4D">Full Map of the Gardens</a></p>
+  <p>Download a map of the Singapore Botanic Gardens at the following link: <a href="https://www.nparks.gov.sg/-/media/sbg/documents/map-sbg-11-feb-2022.jpg?la=en&hash=4073CCD22B168785F034BC0D67095FA6F16A8F4D">Full Map of the Gardens</a></p>
   <p><a href="#CP">Back to top</a></p>
   <hr>
 
@@ -45,17 +46,17 @@
 
   <h3 id="C4"> 4) Parking Charges</h3>
   <p> <u>Hours Charges*</u>
-<br> 7.00 am to 10.30 pm $0.02 per minute
-<br> 7.00 pm to 10.30 pm $2 maximum
-<br> 8.00 am to 9.00 am $1 **
+<br> 7.00 am to 10.30 pm: $0.02 per minute
+<br> 7.00 pm to 10.30 pm: $2 maximum
+<br> 8.00 am to 9.00 am: $1 **
 <br> <i>*No overnight parking is allowed</i>
 <br><i>**Peak hour charge on all passing vehicles that enter from Kheam Hock Road and exit at Evans/Cluny Road</i></p>
 <p><a href="#CP">Back to top</a></p>
  <hr>
 
   <h3 id="C5"> 5) By Mass Rapid Transit (MRT)</h3>
-  <p> <b>Orchard Road MRT Station</b> <br>North-South Line [Red] Transfer to bus services and alight at Napier Road required</p>
-  <p> <b>Botanic Gardens MRT Station</b> <br> Circle Line [Yellow] & Downtown Line [Blue] Bukit Timah Entrance </p>
+  <p> <u>Orchard Road MRT Station</u> (North-South Line) <br> Transfer to bus services and alight at Napier Road required</p>
+  <p> <u>Botanic Gardens MRT Station</u> (Circle Line & Downtown Line) <br> Bukit Timah Entrance </p>
 <p><a href="#CP">Back to top</a></p>
  <hr>
 
