--- a/aboutus.html
+++ b/aboutus.html
@@ -1,17 +1,18 @@
-﻿<!DOCTYPE html>
+﻿ <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
     <title>ABOUT US</title>
 </head>
 <body>
-
   <div class="topnav">
-  <a href="index.html"><b>HOME</b></a>
-  <a class="active" href="aboutus.html"><b>ABOUT US</b></a>
-  <a href="attractions.html"><b>ATTRACTIONS</b></a>
-  <a href="visitus.html"><b>VISIT US</b></a>
+  <a href="index.html"><img src="sbglogo.jpg" alt="Singapore Botanic Gardens" width="180" height="73"></a>
+  <a href="index.html"><br><br><b>HOME</b></a>
+  <a class="active" href="aboutus.html"><br><br><b>ABOUT US</b></a>
+  <a href="attractions.html"><br><br><b>ATTRACTIONS</b></a>
+  <a href="visitus.html"><br><br><b>VISIT US</b></a>
 </div>
 
   <div class="a">
@@ -29,6 +30,7 @@ In January 2014, Singapore formally submitted the official Nomination Dossier fo
 On 15 May, the International Council on Monuments and Sites (ICOMOS) released a recommendation for the Gardens to be inscribed as a UNESCO World Heritage Site. Its evaluation guided the discussion of Singapore’s bid at the 39th session of the World Heritage Committee (WHC). </p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/iVEQeNjN3h0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+
 
 <footer>
   <p>Singapore Botanic Gardens | Location: 1 Cluny Rd, Singapore 259569 | General Operating Hours: 0500H to 0000H | Telephone: (65) 6471 7138 </p>
