--- a/attractions.html
+++ b/attractions.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 <div class="topnav">
-  <a href="index.html"><b>HOME</b></a>
-  <a href="aboutus.html"><b>ABOUT US</b></a>
-  <a class="active" href="attractions.html"><b>ATTRACTIONS</b></a>
-  <a href="visitus.html"><b>VISIT US</b></a>
+  <a href="index.html"><img src="sbglogo.jpg" alt="Singapore Botanic Gardens" width="180" height="73"></a>
+  <a href="index.html"><br><br><b>HOME</b></a>
+  <a href="aboutus.html"><br><br><b>ABOUT US</b></a>
+  <a class="active" href="attractions.html"><br><br><b>ATTRACTIONS</b></a>
+  <a href="visitus.html"><br><br><b>VISIT US</b></a>
 </div>
 
-  <div class="b">
+  <div class="a">
   <h2>Top Attractions</h2>
 
- 
   <div class="responsive">
   <div class="gallery">
   <a target="_blank" a href="swanlake.html">
